--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -6,7 +6,7 @@
         <li class="slider-item swiper-slide">
           <img
             class="slider-item-img"
-            src="./img/slider-1.jpg"
+            src="./img/tomato3.jpg"
             alt="slider"
             width="181"
           />
@@ -25,7 +25,7 @@
         <li class="slider-item swiper-slide">
           <img
             class="slider-item-img"
-            src="./img/slider-2.jpg"
+            src="./img/tomato1.jpg"
             alt="slider"
             width="181"
           />
@@ -44,7 +44,7 @@
         <li class="slider-item swiper-slide">
           <img
             class="slider-item-img"
-            src="./img/slider-3.jpg"
+            src="./img/tomato2.jpg"
             alt="slider"
             width="181"
           />
