--- a/src/partials/modal-form.html
+++ b/src/partials/modal-form.html
@@ -5,7 +5,7 @@
     <form class="form-box">
       <input class="form-input" type="text" name="name" />
       <input class="form-input" type="tel" name="phone" />
-      <button class="form-btn" type="submit">GO</button>
+      <button class="form-btn" type="submit">GO-GO</button>
     </form>
   </div>
 </div>
